--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/project-www-backend/instance
+/project-www-backend/__pycache__/
+/project-www-backend/venv/
