--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-big-calendar": "^1.8.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
